--- a/Lab9/Lab9_WPF/Lab9_WPF/MainWindow.xaml
+++ b/Lab9/Lab9_WPF/Lab9_WPF/MainWindow.xaml
@@ -9,77 +9,84 @@
     <Grid>
         <Grid>
             <WrapPanel Margin="0,20,0,0" VerticalAlignment="Top" HorizontalAlignment="Center">
-                <Button Content="Text"  Margin="10,0,0,0" Width="45" Click="Btn_Text_Click" Background="LightGray" BorderThickness="0" Height="20">
+                <Button Content="Text" Margin="10,0,0,0" Width="45" Click="Btn_Text_Click" Background="LightGray" BorderThickness="0" Height="23" FontSize="19" FontFamily="Microsoft Himalaya">
                     <Button.Resources>
                         <Style TargetType="{x:Type Border}">
                             <Setter Property="CornerRadius" Value="4"/>
                         </Style>
                     </Button.Resources>
                 </Button>
-                <Button Content="Bash" Margin="10,0,0,0" Width="45" Click="Btn_Bash_Click" Background="Lime" BorderThickness="0" Height="20">
+                <Button Content="Bash" Margin="10,0,0,0" Width="45" Click="Btn_Bash_Click" Background="Lime" BorderThickness="0" Height="23" FontSize="19" FontFamily="Microsoft Himalaya">
                     <Button.Resources>
                         <Style TargetType="{x:Type Border}">
                             <Setter Property="CornerRadius" Value="4"/>
                         </Style>
                     </Button.Resources>
                 </Button>
-                <Button Content="C++"  Margin="10,0,0,0" Width="45" Click="Btn_Cpp_Click" Background="Blue" BorderThickness="0" Height="20">
+                <Button Content="C++"  Margin="10,0,0,0" Width="45" Click="Btn_Cpp_Click" Background="DeepSkyBlue" BorderThickness="0" Height="23" FontSize="19" FontFamily="Microsoft Himalaya">
                     <Button.Resources>
                         <Style TargetType="{x:Type Border}">
                             <Setter Property="CornerRadius" Value="4"/>
                         </Style>
                     </Button.Resources>
                 </Button>
-                <Button Content="C#" Margin="10,0,0,0" Width="45" Click="Btn_CSharp_Click" Background="MediumPurple" BorderThickness="0" Height="20">
+                <Button Content="C#" Margin="10,0,0,0" Width="45" Click="Btn_CSharp_Click" Background="MediumPurple" BorderThickness="0" Height="23" FontSize="19" FontFamily="Microsoft Himalaya">
                     <Button.Resources>
                         <Style TargetType="{x:Type Border}">
                             <Setter Property="CornerRadius" Value="4"/>
                         </Style>
                     </Button.Resources>
                 </Button>
-                <Button Content="Java"  Margin="10,0,0,0" Width="45" Click="Btn_Java_Click" Background="BlueViolet" BorderThickness="0" Height="20">
+                <Button Content="Java"  Margin="10,0,0,0" Width="45" Click="Btn_Java_Click" Background="BlueViolet" BorderThickness="0" Height="23" FontSize="19" FontFamily="Microsoft Himalaya">
                     <Button.Resources>
                         <Style TargetType="{x:Type Border}">
                             <Setter Property="CornerRadius" Value="4"/>
                         </Style>
                     </Button.Resources>
                 </Button>
-                <Button Content="CSS" Margin="10,0,0,0" Width="45" Click="Btn_CSS_Click" Background="LightBlue" BorderThickness="0" Height="20">
+                <Button Content="CSS" Margin="10,0,0,0" Width="45" Click="Btn_CSS_Click" Background="LightBlue" BorderThickness="0" Height="23" FontSize="19" FontFamily="Microsoft Himalaya">
                     <Button.Resources>
                         <Style TargetType="{x:Type Border}">
                             <Setter Property="CornerRadius" Value="4"/>
                         </Style>
                     </Button.Resources>
                 </Button>
-                <Button Content="HTML" Margin="10,0,0,0" Width="45" Click="Btn_HTML_Click" Background="Orange" BorderThickness="0" Height="20">
+                <Button Content="HTML" Margin="10,0,0,0" Width="45" Click="Btn_HTML_Click" Background="Orange" BorderThickness="0" Height="23" FontSize="19" FontFamily="Microsoft Himalaya">
                     <Button.Resources>
                         <Style TargetType="{x:Type Border}">
                             <Setter Property="CornerRadius" Value="4"/>
                         </Style>
                     </Button.Resources>
                 </Button>
-                <Button Content="Java Script" Margin="10,0,0,0" Width="70" Click="Btn_JS_Click" Background="Yellow" BorderThickness="0" Height="20">
+                <Button Content="Java Script" Margin="10,0,0,0" Width="70" Click="Btn_JS_Click" Background="Yellow" BorderThickness="0" Height="23" FontSize="19" FontFamily="Microsoft Himalaya">
                     <Button.Resources>
                         <Style TargetType="{x:Type Border}">
                             <Setter Property="CornerRadius" Value="4"/>
                         </Style>
                     </Button.Resources>
                 </Button>
-                <Button Content="PHP" Margin="10,0,0,0" Width="45" Click="Btn_PHP_Click" Background="LightSlateGray" BorderThickness="0" Height="20">
+                <Button Content="PHP" Margin="10,0,0,0" Width="45" Click="Btn_PHP_Click" Background="CornflowerBlue" BorderThickness="0" Height="23" FontSize="19" FontFamily="Microsoft Himalaya">
                     <Button.Resources>
                         <Style TargetType="{x:Type Border}">
                             <Setter Property="CornerRadius" Value="4"/>
                         </Style>
                     </Button.Resources>
                 </Button>
-                <Button Content="Python" Margin="10,0,0,0" Width="45" Click="Btn_Python_Click"  Background="Yellow" BorderThickness="0" Height="20">
+                <Button Content="Python" Margin="10,0,0,0" Width="45" Click="Btn_Python_Click"  Background="Yellow" BorderThickness="0" Height="23" FontSize="19" FontFamily="Microsoft Himalaya">
                     <Button.Resources>
                         <Style TargetType="{x:Type Border}">
                             <Setter Property="CornerRadius" Value="4"/>
                         </Style>
                     </Button.Resources>
                 </Button>
-                <Button Content="SQL" Margin="10,0,0,0" Width="45" Click="Btn_SQL_Click" BorderThickness="0" Height="20">
+                <Button Content="SQL" Margin="10,0,0,0" Width="45" Click="Btn_SQL_Click" BorderThickness="0" Height="23" FontSize="19" FontFamily="Microsoft Himalaya">
+                    <Button.Resources>
+                        <Style TargetType="{x:Type Border}">
+                            <Setter Property="CornerRadius" Value="4"/>
+                        </Style>
+                    </Button.Resources>
+                </Button>
+                <Button Content="All" Margin="10,0,0,0" Width="75" Click="Btn_All_Click" Background="LightGreen" BorderThickness="0" Height="23" FontSize="19" FontFamily="Microsoft Himalaya">
                     <Button.Resources>
                         <Style TargetType="{x:Type Border}">
                             <Setter Property="CornerRadius" Value="4"/>
@@ -91,49 +98,29 @@
         <Grid HorizontalAlignment="Right">
             <WrapPanel  Margin="0,100,10,0" VerticalAlignment="Top">
                 <Label Content="Page Number" Margin="0,-25,-200,0" FontSize="18" FontFamily="Microsoft Himalaya" HorizontalAlignment="Center"/>
-                <Button Content="1" Margin="0,0,5,0" Width="25" Click="Btn_One_Click" Background="White" BorderThickness="2" BorderBrush="SkyBlue">
+                <Button Content="Previous" Margin="0,0,10,0" Width="60" Click="Btn_Prev_Click" Background="White" BorderThickness="2" BorderBrush="SkyBlue" FontSize="19" FontFamily="Microsoft Himalaya">
                     <Button.Resources>
                         <Style TargetType="{x:Type Border}">
                             <Setter Property="CornerRadius" Value="4"/>
                         </Style>
                     </Button.Resources>
                 </Button>
-                <Button Content="2" Margin="0,0,5,0" Width="25" Click="Btn_SQL_Click" Background="White" BorderThickness="2" BorderBrush="SkyBlue">
+                <Button Content="1" Margin="0,0,5,0" Width="25" Click="Btn_First_Click" Background="White" BorderThickness="2" BorderBrush="SkyBlue" FontSize="19" FontFamily="Microsoft Himalaya">
                     <Button.Resources>
                         <Style TargetType="{x:Type Border}">
                             <Setter Property="CornerRadius" Value="4"/>
                         </Style>
                     </Button.Resources>
                 </Button>
-                <Button Content="3" Margin="0,0,5,0" Width="25" Click="Btn_SQL_Click" Background="White" BorderThickness="2" BorderBrush="SkyBlue">
+                <Label x:Name="BetweenPageNumberLabel" Content="..." HorizontalAlignment="Center" VerticalContentAlignment="Bottom" Margin="0,0,5,0" VerticalAlignment="Top" FontSize="18" FontFamily="Microsoft Himalaya"/>
+                <Button x:Name="LastPageBtn" Margin="0,0,5,0" Width="25" Click="Btn_Last_Click" Background="White" BorderThickness="2" BorderBrush="SkyBlue" FontSize="19" FontFamily="Microsoft Himalaya">
                     <Button.Resources>
                         <Style TargetType="{x:Type Border}">
                             <Setter Property="CornerRadius" Value="4"/>
                         </Style>
                     </Button.Resources>
                 </Button>
-                <Button Content="4" Margin="0,0,5,0" Width="25" Click="Btn_SQL_Click" Background="White" BorderThickness="2" BorderBrush="SkyBlue">
-                    <Button.Resources>
-                        <Style TargetType="{x:Type Border}">
-                            <Setter Property="CornerRadius" Value="4"/>
-                        </Style>
-                    </Button.Resources>
-                </Button>
-                <Button Content="5" Margin="0,0,5,0" Width="25" Click="Btn_SQL_Click" Background="White" BorderThickness="2" BorderBrush="SkyBlue">
-                    <Button.Resources>
-                        <Style TargetType="{x:Type Border}">
-                            <Setter Property="CornerRadius" Value="4"/>
-                        </Style>
-                    </Button.Resources>
-                </Button>
-                <Button Content="6" Margin="0,0,5,0" Width="25" Click="Btn_SQL_Click" Background="White" BorderThickness="2" BorderBrush="SkyBlue">
-                    <Button.Resources>
-                        <Style TargetType="{x:Type Border}">
-                            <Setter Property="CornerRadius" Value="4"/>
-                        </Style>
-                    </Button.Resources>
-                </Button>
-                <Button Content="7" Margin="0,0,5,0" Width="25" Click="Btn_SQL_Click" Background="White" BorderThickness="2" BorderBrush="SkyBlue">
+                <Button Content="Next" Margin="5,0,0,0" Width="60" Click="Btn_Next_Click" Background="White" BorderThickness="2" BorderBrush="SkyBlue" FontSize="19" FontFamily="Microsoft Himalaya">
                     <Button.Resources>
                         <Style TargetType="{x:Type Border}">
                             <Setter Property="CornerRadius" Value="4"/>
@@ -141,13 +128,15 @@
                     </Button.Resources>
                 </Button>
                 <Label Content="Page Size" Margin="0,-25,-90,0" FontSize="18" FontFamily="Microsoft Himalaya" HorizontalAlignment="Center" />
-                <ComboBox SelectedIndex="0" Margin="25,0,5,0" x:Name="comboBoxPageSize" Width="45" Height="23" FontSize="13" BorderThickness="0" BorderBrush="SkyBlue" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" SelectedValuePath="Content">
+                <ComboBox SelectedIndex="1" Margin="25,0,5,0" x:Name="comboBoxPageSize" Width="45" Height="23" FontSize="13" BorderThickness="0" BorderBrush="SkyBlue" HorizontalContentAlignment="Center" SelectedValuePath="Content">
                     <ComboBoxItem Content="5"/>
                     <ComboBoxItem Content="10"/>
                     <ComboBoxItem Content="15"/>
                     <ComboBoxItem Content="20"/>
+                    <ComboBoxItem Content="30"/>
+                    <ComboBoxItem Content="50"/>
                 </ComboBox>
-                <Button Content="Refresh" Margin="10,0,5,0" Width="50" Click="Btn_LoadPageSizeData" Background="LightGreen" BorderThickness="0">
+                <Button Content="Refresh" Margin="10,0,5,0" Width="50" Click="Btn_LoadPageSizeData" Background="Red" BorderThickness="0" Height="25" FontSize="19" FontFamily="Microsoft Himalaya">
                     <Button.Resources>
                         <Style TargetType="{x:Type Border}">
                             <Setter Property="CornerRadius" Value="4"/>
@@ -156,7 +145,8 @@
                 </Button>
             </WrapPanel>
         </Grid>
-        <DataGrid Margin="0,150,0,0" x:Name="gridSnippet" AutoGenerateColumns="False">
+        <Label x:Name="PageNumberLabel" HorizontalAlignment="Left" Margin="10,120,0,0" VerticalAlignment="Top" FontSize="18" FontFamily="Microsoft Himalaya"/>
+        <DataGrid Margin="0,150,0,0" x:Name="gridSnippet" AutoGenerateColumns="False" FontSize="20" FontFamily="Microsoft Himalaya">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Snippet Name" Width="3*" Binding="{Binding Name}"/>
                 <DataGridTextColumn Header="Snippet Type" Width="*" Binding="{Binding Type}"/>
